@@ -1,5 +1,13 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.645 2006/07/12 23:28:40 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.646 2006/07/19 21:39:46 wolf31o2 Exp $
+
+  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/livecdfs-update.sh:
+  I've modified the GDM configuration section to work correctly. I have also
+  ensured that xdm is no longer started just because livecd/xdm is used, which
+  was causing issues for the generic-livecd type. This is 2.0_rc50, which
+  should be the last of the 'release candidates' made. If there are no bug
+  reports in 2 days, then I'm rolling this as 2.0 final.
 
   12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/livecdfs-update.sh:
